feat(backup): added backup to cloud storage

--- a/.env.secure.yaml
+++ b/.env.secure.yaml
@@ -3,6 +3,7 @@ env:
   ORGANIZATION: codesdowork
   PROJECT: monorepo
   IMAGE_BASE: ${DOCKER_REGISTRY}/${ORGANIZATION}/${PROJECT}
+  STACK_NAME: ${ORGANIZATION}_${PROJECT}
 
   DB_NAME: postgres
   DB_PORT: 5432
@@ -30,6 +31,14 @@ secrets:
       - SERVER_ADDRESS
       - DEFAULT_NETWORK_PREFIX
       - DEFAULT_NETWORK_MASK
+
+  BACKBLAZE:
+    collectionId: 5511bbdb-a642-4d77-a528-c5a05bb241ef
+    prefix: true
+    vars:
+      - KEY_ID
+      - APPLICATION_KEY
+      - BUCKET_NAME
 
   BITWARDEN:
     collectionId: 26a5baf1-fd83-4685-9b00-01826fb2d871
@@ -141,6 +150,12 @@ secrets:
     vars:
       - TOKEN
       - GITHUB_COM_TOKEN
+
+  RESTIC:
+    collectionId: b02ecfb5-e0c7-4b85-9bc2-ea2c43eb52b6
+    prefix: true
+    vars:
+      - PASSWORD
 
   SMTP:
     collectionId: 9bb1f417-7361-4d76-bd15-0c2a90d43141
