--- a/src/certbot/Dockerfile
+++ b/src/certbot/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:latest
+FROM ubuntu:24.04
 
 RUN apt-get update
 RUN apt-get install -y certbot python3-certbot-nginx python3-certbot-dns-cloudflare
