chore(env): update env use

--- a/.env.secure.yaml
+++ b/.env.secure.yaml
@@ -29,6 +29,7 @@ secrets:
     prefix: false
     vars:
       - DOMAIN
+      - URL
       - SERVER_ADDRESS
       - DEFAULT_NETWORK_PREFIX
       - DEFAULT_NETWORK_MASK
@@ -67,6 +68,7 @@ secrets:
       - AUTH_CLIENT_SECRET
       - PORT
       - DOMAIN
+      - URL
 
   DASHBOARD:
     collectionId: 040210ac-cf5b-46db-9c5c-35eb1d062f1c
