--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -162,12 +162,17 @@ services:
 
   dns:
     <<: *common
+    build:
+      <<: *build-args
+      dockerfile: src/dns/Dockerfile
     cap_add:
       - CAP_CHOWN
+      - CAP_DAC_OVERRIDE
       - CAP_FOWNER
+      - CAP_SETFCAP
       - CAP_SETGID
       - CAP_SETUID
-    image: pihole/pihole:2024.07.0
+    image: ${IMAGE_BASE}/dns
     environment:
       - TZ=${TZ}
       - WEBPASSWORD=${DNS_PASSWORD}
@@ -205,7 +210,7 @@ services:
     <<: *common
     build:
       <<: *build-args
-      dockerfile: apps/server/documentation/Dockerfile
+      dockerfile: src/documentation/Dockerfile
     cap_add:
       - CAP_CHOWN
       - SETUID
@@ -317,7 +322,7 @@ services:
     <<: *common
     build:
       <<: *build-args
-      dockerfile: apps/server/just-site/Dockerfile
+      dockerfile: src/just-site/Dockerfile
     environment:
       - GITHUB_TOKEN=${JUST_SITE_GITHUB_TOKEN}
       - DOMAIN=${URL}
@@ -392,7 +397,7 @@ services:
     <<: *common
     build:
       <<: *build-args
-      dockerfile: apps/server/music-downloader/Dockerfile
+      dockerfile: src/music/downloader/Dockerfile
     environment:
       - DOWNLOAD_DIR=/music/downloads
       - PORT=${MUSIC_DOWNLOADER_PORT}
