--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
         "cross-env": "^7.0.3",
         "dotenv-cli": "^7.4.2",
         "emailjs": "^4.0.3",
+        "envsub": "^4.1.0",
         "esbuild": "^0.23.1",
         "eslint": "^8.57.0",
         "eslint-config-next": "14.2.5",
