--- a/.env.secure.yaml
+++ b/.env.secure.yaml
@@ -6,6 +6,8 @@ env:
   STACK_NAME: ${ORGANIZATION}_${PROJECT}
   DEPLOY_PATH: /opt/${ORGANIZATION}/${PROJECT}
 
+  DASHBOARD_CONFIG_DIR: /dashy/config
+
   DB_NAME: postgres
   DB_PORT: 5432
 
