--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
         "@astrojs/tailwind": "^5.1.1",
         "@bitwarden/cli": "^2024.9.0",
         "@cloudflare/kv-asset-handler": "^0.3.4",
+        "@directus/api": "^22.2.0",
+        "@directus/extensions-sdk": "^12.0.2",
+        "@directus/types": "^12.0.1",
         "@iconify/svelte": "^4.0.2",
         "@nx/esbuild": "19.6.0",
         "@nx/eslint": "19.6.0",
@@ -109,6 +112,7 @@
         "prettier-plugin-organize-imports": "^4.0.0",
         "prettier-plugin-svelte": "^3.2.6",
         "prettier-plugin-tailwindcss": "^0.6.6",
+        "replace-in-files-cli": "^3.0.0",
         "rimraf": "^6.0.1",
         "secretlint": "^8.2.4",
         "stream-browserify": "^3.0.0",
