--- a/src/dns/Dockerfile
+++ b/src/dns/Dockerfile
@@ -11,7 +11,7 @@ FROM workspace AS builder
 ARG APP_NAME
 
 COPY . .
-RUN npx nx build $APP_NAME
+RUN nx build $APP_NAME
 
 
 FROM pihole/pihole:2024.07.0
