--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,14 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-dist
-tmp
+/dist
+/tmp
 /out-tsc
 
 # dependencies
-node_modules
+/node_modules
 
 # IDEs and editors
-/.idea
 .project
 .classpath
 .c9/
@@ -38,16 +37,8 @@ testem.log
 .DS_Store
 Thumbs.db
 
-# Next.js
-.next
-.env.local
-
 .nx/cache
 .nx/workspace-data
-
-# outputs
-/deploy
-/deploy-commands.sh
 
 # env
 .env
