fix(gitlab-runner): start with run-single command

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -297,9 +297,10 @@ services:
 
   gitlab-runner:
     <<: *common
+    command:
+      - run-single
     dns: ${DNS_IP}
     environment:
-      - RUNNER_NAME=gitlab-runner
       - RUNNER_EXECUTOR=docker
       - DOCKER_DNS=${DNS_IP}
       - DOCKER_VOLUMES=/cache
