--- a/src/secrets-manager/package.json
+++ b/src/secrets-manager/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "@nx/devkit": "19.6.0",
         "inquirer": "10.2.2",
+        "tslib": "2.6.3",
         "yaml": "2.5.1",
         "zod": "3.23.8"
     },
