--- a/src/music/playlist-creator/Dockerfile
+++ b/src/music/playlist-creator/Dockerfile
@@ -1,7 +1,9 @@
 FROM alpine:3.20.3
 
-COPY ./apps/music/playlist-creator/create_playlists.sh /create_playlists.sh
-RUN chmod +x /create_playlists.sh
+RUN apk add --no-cache bash
 
-ENTRYPOINT ["/create_playlists.sh"]
+COPY ./src/music/playlist-creator/create_playlists.sh /usr/local/bin/
+RUN chmod +x /usr/local/bin/create_playlists.sh
+
+ENTRYPOINT ["create_playlists.sh"]
 CMD ["/music"]
