--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -138,11 +138,11 @@ services:
       ofelia.job-run.create-playlists.schedule: 0 30 2 * * *
       ofelia.job-run.create-playlists.volume: ${MUSIC_VOLUME}:/music
 
-      ofelia.job-run.renew-certs.command: "certonly --reinstall \
-      --dns-cloudflare --dns-cloudflare-credentials /app/cloudflare.ini --dns-cloudflare-propagation-seconds 20 \
-      --email ${CLOUDFLARE_EMAIL} --agree-tos --no-eff-email \
-      -d ${DOMAIN} -d *.${DOMAIN}"
-      ofelia.job-run.renew-certs.environment: CLOUDFLARE_API_TOKEN
+      ofelia.job-run.renew-certs.environment: "[
+        \"CLOUDFLARE_API_TOKEN=${CLOUDFLARE_API_TOKEN}\",
+        \"CERTBOT_EMAIL=${CLOUDFLARE_EMAIL}\",
+        \"DOMAIN=${DOMAIN}\"
+      ]"
       ofelia.job-run.renew-certs.image: ${IMAGE_BASE}/certbot
       ofelia.job-run.renew-certs.schedule: 0 30 2 1 * *
       ofelia.job-run.renew-certs.volume: ${STACK_NAME}_letsencrypt:/etc/letsencrypt
