--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,3 @@
 {
-    "extends": "./tsconfig.base.json",
-    "ts-node": {
-        "compilerOptions": {
-            "module": "commonjs"
-        }
-    }
+    "extends": "./tsconfig.base.json"
 }
